# Prallel-labs

./: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  Parallel_Work.ipynb  main.cpp  Конспект.md
